@@ -1,3 +1,7 @@
+2007-12-23 Jens Tkotz <jens@peino.de> 1.5.8-svn-b9
+
+ * Fix: fitToWindow Fix
+
 2007-12-23 Jens Tkotz <jens@peino.de> 1.5.8-svn-b8
 
  Fix: Add missing Parameter for Gallery Remote in drawApplet()
